# sync-rollups

./: .gitignore  CAVEATS.md  CLAUDE.md  README.md  TODO.md  foundry.toml
rollup1/: L2_EXECUTION_ENGINE_SPEC.md  README.md  STATE_TRANSITION_SPEC.md  package-lock.json  package.json
rollup1/blockscout/: README.md
rollup1/builder/: README.md  builder.ts  bundle-submitter.ts  execution-planner.ts  mock-bundle-submitter.ts  proof-generator.ts  rpc-proxy.ts
rollup1/deploy/: README.md
rollup1/ethrex-fullnode/: Cargo.toml  README.md  TODO.md
rollup1/ethrex-fullnode/src/: engine.rs  event_processor.rs  l1_watcher.rs  lib.rs  rpc_client.rs  tx_signer.rs  types.rs
rollup1/proofer/: README.md  proofer.ts
rollup1/reth-fullnode/: README.md  event-processor.ts  rpc-server.ts  state-manager.ts  types.ts
rollup1/scripts/: README.md  atomic-arb.ts  compute-genesis-root.ts  concurrency-arb.ts  (+11 more)
script/: Deploy.s.sol  DeployECDSA.s.sol
src/: CrossChainManagerL2.sol  CrossChainProxy.sol  ICrossChainManager.sol  IZKVerifier.sol  L2Authority.sol  L2Proxy.sol  Rollups.sol
test/: CrossChainManagerL2.t.sol  INTEGRATION_TEST_NOTES.md  INTEGRATION_TEST_PLAN.md  IntegrationTest.t.sol  Rollups.t.sol
tooling/: .gitignore  L2_EXECUTION_ENGINE_SPEC.md  PROGRESS.md  README.md  STATE_TRANSITION_SPEC.md  foundry.toml  package-lock.json  package.json  restore-l1-from-backup.sh  setup-fresh-l1.sh  setup-gnosis.sh  start-ethrex-fullnode.sh  start-gnosis.sh  start-local.sh  test-counter-e2e.ts  test-e2e.ts  test-l1-to-l2.ts  tsconfig.json
visualizator/: .gitignore  DEPLOY.md  index.html
(+122 files in other folders)
