[package]
name = "sync-rollups-ethrex-fullnode"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/JSON-RPC
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum types and ABI
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-rlp = "0.3"

# JWT for Engine API auth
jsonwebtoken = "9"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Crypto
tiny-keccak = { version = "2", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
eyre = "0.6"
thiserror = "2"

# Misc
chrono = "0.4"
